test/tests/compiler/18_structures/invalid_parse/plx1_type_kw_in_struct_specifier.plx
type struc s1(x: i32, y: i32)

pub fn main(none) i32 {
    s: type struc s1 = $(10, 20)
    return 0
}
